[tool.poetry]
name = "chatql-line"
version = "0.1.0"
readme = "README.md"
authors = ["katsugeneration <katsu.generation.888@gmail.com>"]
homepage = "https://github.com/katsugeneration"
repository = "https://github.com/katsugeneration/chatql-line"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
line-bot-sdk = "^1.8"
chatql = {git = "https://github.com/katsugeneration/chatql.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
